--- a/simora/pom.xml
+++ b/simora/pom.xml
@@ -49,6 +49,15 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>2.2.2.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.19</version>
+			<scope>runtime</scope>
+
+		</dependency>
+
 	</dependencies>
 
 	<build>
