--- a/simora/src/main/resources/application.properties
+++ b/simora/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8099
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/simoradb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=simorauser
+spring.datasource.password=simorapassword
