--- a/simora/src/main/resources/application.properties
+++ b/simora/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/simoradb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=simorauser
 spring.datasource.password=simorapassword
+spring.mvc.view.prefix=/pages/
+spring.mvc.view.suffix=.html
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
