--- a/simora/src/main/resources/application.properties
+++ b/simora/src/main/resources/application.properties
@@ -3,5 +3,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/simoradb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=simorauser
 spring.datasource.password=simorapassword
-spring.mvc.view.prefix=/pages/
+#spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.html
+spring.mail.host=localhost
+spring.mail.port=2525
+spring.mail.properties.mail.smtp.auth=false
+#nese vendosim te perdorim serverat e gmail pasi te bejme deploy https://support.google.com/mail/answer/7104828?hl=en&rd=3&visit_id=637259455222370426-3817671754
+#spring.mail.username=<login user to smtp server>
+#spring.mail.password=<login password to smtp server>
+#spring.mail.properties.mail.smtp.starttls.enable=true
